2017-04-26  Paul Vojta  <vojta@math.berkeley.edu>

	* dvi.c, dvipdfmx.c, spc_html.c, spc_util.c: Support additional
	length units.

2017-04-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Fix a bug that generation of GID to CID mapping for
	format 2 CFF charsets was wrong. "unicode" encoding support was
	broken for fonts using this format.

2017-04-15  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* fontmap.c, tt_cmap.c, tt_gsub.c, tt_gsub.h, pdffont.c: Removed
	undocumented OpenType Layout GSUB support.  Added simplified version of
	OpenType Layout GSUB support. Fontmap option "-l otl_tags" enables
	OpenType GSUB features specified by otl_tags, where otl_tags is a ":"
	separated list of OpenType Layout feature tags
	(or strings of script.language.feature form).
	
2017-04-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Fix a bug in static const char *optstrig.
	
2017-04-09  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Vertical writing support had been broken since at some
	point of xdvipdfmx merge for "unicode" encoding. Apply vert/vrt2 GSUB
	feature when generating Unicode mapping.
	
2017-03-18  Karl Berry  <karl@tug.org>

	* xbb.c: update copyright years.
	
	* xdvipdfm-bb.test: remove any ^%%Creat line, not just %%CreationDate.
	* tests/*.[x]bb: remove %%Creator: lines since they embed version.

2017-03-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Bump version to 20170318 for TeX Live 2017.

2017-03-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Command line -p option wins papersize and pagesize
	specials, as dvips.

2017-02-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: Add possibly forgotten braces.

2017-01-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* jpegimage.c: Support Exif tags 0x5110, 0x5111, and 0x5112 in order to
	avoid warnings for some kind of jpeg images. Changes are borrowed from
	writejpg.w by Luigi in the recent LuaTeX.
